fixes pager layout on mobile

--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -208,7 +208,7 @@
     position: absolute;
     bottom: 50px;
     left: 100px;
-    right: 100px;
+    right: 50px;
     z-index: 2;
     display: flex;
     flex-wrap: wrap;
